sna: Force the TearFree redisplay when populating a rotated configuration

We have to disable the "shadow idle; skipping" test if the CRTCs are
showing stale content following a sna_crtc_attach().

Reported-by: Chris Bainbridge <chris.bainbridge@gmail.com>
References: https://bugs.freedesktop.org/show_bug.cgi?id=89904
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>